# testmaya

./: docker-compose.yml
backend/: .env  Cargo.toml
backend/migrations/: 20250703110001_create_users_table.sql  20250703110002_create_hotels_table.sql  20250703110003_create_bookings_table.sql
backend/src/: main.rs  models.rs
backend/src/handlers/: auth.rs  booking.rs  hotel.rs  hotel.rs 
backend/src/middleware/: auth.rs
frontend/src/: App.js
frontend/src/components/: Header.js  HotelBookingForm.js  RegistrationModal.js
frontend/src/pages/: HotelesPage.js  PortalPage.js
frontend/src/services/: api.js
