[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-web = "4.5.1"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = [ "runtime-async-std-native-tls", "postgres", "macros", "chrono", "json" ] }
# Nuevas dependencias para autenticación
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }